完成 1. 加载配置文件  2. 代理服务的完成 3. 序列化的完成